--- a/InternetPlatformOfArtists/InternetPlatformOfArtists/appsettings.json
+++ b/InternetPlatformOfArtists/InternetPlatformOfArtists/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionString": {
+    "DefaultConnection": "Server=localhost;Database=art;User=root;Password=root;"
+  }
 }
