--- a/InternetPlatformOfArtist/InternetPlatformOfArtist/ClientApp/package.json
+++ b/InternetPlatformOfArtist/InternetPlatformOfArtist/ClientApp/package.json
@@ -13,6 +13,7 @@
     "oidc-client": "~1.11.5",
     "react": "~16.14.0",
     "react-dom": "~16.14.0",
+    "react-helmet": "^6.1.0",
     "react-router": "~5.2.1",
     "react-router-bootstrap": "^0.25.0",
     "react-router-dom": "^6.4.3",
