--- a/InternetPlatformOfArtist/InternetPlatformOfArtist/ClientApp/package.json
+++ b/InternetPlatformOfArtist/InternetPlatformOfArtist/ClientApp/package.json
@@ -12,6 +12,7 @@
     "node-sass": "^7.0.3",
     "oidc-client": "~1.11.5",
     "react": "~16.14.0",
+    "react-cookie": "^4.1.1",
     "react-dom": "~16.14.0",
     "react-helmet": "^6.1.0",
     "react-hook-form": "^7.39.5",
