--- a/InternetPlatformOfArtist/InternetPlatformOfArtist/ClientApp/package.json
+++ b/InternetPlatformOfArtist/InternetPlatformOfArtist/ClientApp/package.json
@@ -19,6 +19,7 @@
     "react-router": "~5.2.1",
     "react-router-bootstrap": "^0.25.0",
     "react-router-dom": "^6.4.3",
+    "react-use-cookie": "^1.4.0",
     "reactstrap": "~8.10.1",
     "rimraf": "^3.0.2"
   },
