--- a/InternetPlatformOfArtist/InternetPlatformOfArtist/ClientApp/package.json
+++ b/InternetPlatformOfArtist/InternetPlatformOfArtist/ClientApp/package.json
@@ -21,7 +21,8 @@
     "react-router-dom": "^6.4.3",
     "react-use-cookie": "^1.4.0",
     "reactstrap": "~8.10.1",
-    "rimraf": "^3.0.2"
+    "rimraf": "^3.0.2",
+    "store": "^2.0.12"
   },
   "devDependencies": {
     "ajv": "^6.9.1",
