--- a/InternetPlatformOfArtist/InternetPlatformOfArtist/InternetPlatformOfArtist.csproj
+++ b/InternetPlatformOfArtist/InternetPlatformOfArtist/InternetPlatformOfArtist.csproj
@@ -34,8 +34,16 @@
 
   <ItemGroup>
     <!-- Don't publish the SPA source files, but do show them in the project files list -->
+    <Compile Remove="wwwroot\Competition\**" />
+    <Compile Remove="wwwroot\Group\**" />
     <Content Remove="$(SpaRoot)**" />
+    <Content Remove="wwwroot\Competition\**" />
+    <Content Remove="wwwroot\Group\**" />
+    <EmbeddedResource Remove="wwwroot\Competition\**" />
+    <EmbeddedResource Remove="wwwroot\Group\**" />
     <None Remove="$(SpaRoot)**" />
+    <None Remove="wwwroot\Competition\**" />
+    <None Remove="wwwroot\Group\**" />
     <None Include="$(SpaRoot)**" Exclude="$(SpaRoot)node_modules\**" />
   </ItemGroup>
 
